인스타그램 내 화면 뼈대

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div id="top">    
         <img src="https://www.instagram.com/static/images/web/mobile_nav_type_logo.png/735145cfe0a4.png">
-        <input type="search" value="search" />
+        <input type="search" value="search" />        
         <div>
             <i class="far fa-user-tag"></i>
             <i class="far fa-home"></i>
@@ -17,6 +17,7 @@
             <i class="far fa-plane"></i>
         </div>
         </div>
+        <div id="line"></div>
         <div id="profile">
             <div id="profile_pic">
             <img class="circle_pic" src="image/profile.jpg"/>
