--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <html>
-
 <head>
     <link href="style.css" rel="stylesheet">
     <link href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" rel="stylesheet"/>
-
+    <script src="script.js"></script>
 </head>
 
-<body>
+<body>    
     <div id="top">    
         <img src="https://www.instagram.com/static/images/web/mobile_nav_type_logo.png/735145cfe0a4.png">
         <input type="search" value="search" />        
@@ -23,16 +22,19 @@
             <img class="circle_pic" src="image/profile.jpg"/>
             </div>
             <div id="profile_info">
-                <div id="id">half_bottle <i class="far fa-cog"></i></div>
+                <div id="id">
+                    <span>half_bottle</span>
+                    <i class="far fa-cog"></i>
+                </div>
                 <button>프로필 편집</button>
             </div>
         </div>
         <p>
-            <strong>권용신(Kwon Yongshin)
+            <strong id="username">스누피 친구(snoopy friend)
             </strong></br>
-            학생
+            <span id="userinfo">학생</span>
         </p>
-        <p>
+        <p id="profileDetail">
             <a href="https://github.com/yongyong02/instagram">
                 yongyong02.github.io
             </a>
