인스트그램 내 화면

--- a/index.html
+++ b/index.html
@@ -23,20 +23,20 @@
             </div>
             <div id="profile_info">
                 <div id="id">
-                    <span>half_bottle</span>
+                    <span>사용자 이름</span>
                     <i class="far fa-cog"></i>
                 </div>
                 <button>프로필 편집</button>
             </div>
         </div>
         <p>
-            <strong id="username">스누피 친구(snoopy friend)
+            <strong id="username">이름
             </strong></br>
-            <span id="userinfo">학생</span>
+            <span id="userinfo">소개</span>
         </p>
         <p id="profileDetail">
             <a href="https://github.com/yongyong02/instagram">
-                yongyong02.github.io
+                url를 누르면 원하는 화면으로 이동
             </a>
         </p>
     </div>
